# MAYA

./: Automatic Multi-target Multiverse.ipynb  Basic_Usage.md  LICENSE  Local_usage.ipynb  MAYA-1.ipynb  MAYA-2.ipynb  MAYA-3.ipynb  MAYA.ipynb  MAYA.py  MM.py  Noteboo_example_local_vertion.ipynb  README.md  Untitled document.md  User_Guide.md  __init__.py  copy_of_maya.py  environment.yml  example_3.xlsx  maya.py  maya_local.py  pyproject.toml  requirements.txt
Examples/: example_1.xlsx  fex.csv
Examples/Output/: dataset_ECFP_PCA.csv  dataset_druglikeness_tSNE.csv  dataset_tSNE_MACCS.csv
Examples/Output_example_2/: dataset_A3_PCA.csv  dataset_A3_tSNE.csv  dataset_B1_PCA-1.csv  dataset_B1_tSNE-1.csv  dataset_ECFP_PCA-2.csv  dataset_druglikeness_PCA-1.csv  dataset_druglikeness_tSNE-3.csv  dataset_tSNE_MACCS-2.csv
MAYA/: _init_.py  analyzer.py  cli.py  config.py  data.py  descriptors.py  pyproject.toml  reduction.py  similarity.py  utils.py  visualization.py
examples/: example_2.xlsx  fex.csv
maya_chem/: __init__.py  analyzer.py  cli.py  config.py  curation.py  data.py  descriptors.py  interactive.py  metrics.py  reduction.py  similarity.py  utils.py  visualization.py
tests/: example_1.ipynb
